[project]
name = "karaoke-tts"
version = "0.1.0"
description = "Local TTS MCP server with synchronized karaoke-style word highlighting"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "piper-tts>=1.2.0",
    "kokoro-onnx>=0.4.0",
    "faster-whisper>=1.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "websockets>=13.0",
]

[project.scripts]
karaoke-tts = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
